--- a/Lab_2/Lab_ex_2_1_MRJob.ipynb
+++ b/Lab_2/Lab_ex_2_1_MRJob.ipynb
@@ -36,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: conda\n"
+     ]
+    }
+   ],
    "source": [
     "#install mrjob lib and boto3 for AWS S3 access\n",
     "!conda install -c conda-forge -y mrjob boto3\n",
@@ -62,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting wordcount.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%file wordcount.py \n",
     "#this will save this cell as file\n",
@@ -96,11 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"wordcount.py\", line 3, in <module>\n",
+      "    from mrjob.job import MRJob\n",
+      "ImportError: No module named mrjob.job\n"
+     ]
+    }
+   ],
    "source": [
     "! python wordcount.py -r local *.rst > out.txt"
    ]
@@ -196,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
